Almost finished first dirty version.

--- a/templates/invoice.html.twig
+++ b/templates/invoice.html.twig
@@ -26,7 +26,7 @@
         </td>
         <td width="50%">
             {{ include ('invoice_side.html.twig', {
-                t: trans_data.source,
+                t: trans_data.target,
                 services: services,
                 images: images,
                 context: 'target',
