--- a/templates/invoice_side.html.twig
+++ b/templates/invoice_side.html.twig
@@ -1,4 +1,4 @@
-<h2 class="title">{{ t.title }}</h2>
+<h2 class="title">{{ 'label_title'|trans(locale, true) }}</h2>
 
 <!-- Party attributes -->
 <table class="bordered fat">
@@ -6,36 +6,34 @@
         <td colspan="3">&nbsp;</td>
     </tr>
     <tr>
-        <td rowspan="2">{{ t.rows.supplier }}:</td>
-        <td colspan="2">{{ t.supplier.title }}</td>
+        <td rowspan="2">{{ 'label_supplier'|trans(locale) }}:</td>
+        <td colspan="2">{{ 'supplier_title'|trans(locale) }}</td>
     </tr>
     <tr>
-        <td colspan="2">{{ t.supplier.address }}</td>
+        <td colspan="2">{{ 'supplier_address'|trans(locale) }}</td>
     </tr>
     <tr>
-        <td rowspan="{{ 2 + t.buyer.extra|length }}">{{ t.rows.buyer }}:</td>
-        <td colspan="2">{{ t.buyer.title }}</td>
+        <td rowspan="3">{{ 'label_buyer'|trans(locale) }}:</td>
+        <td colspan="2">{{ 'buyer_title'|trans(locale) }}</td>
     </tr>
     <tr>
-        <td colspan="2">{{ t.buyer.address }}</td>
+        <td colspan="2">{{ 'buyer_address'|trans(locale) }}</td>
     </tr>
-    {% for item in t.buyer.extra %}
     <tr>
-        <td colspan="2">{{ item }}</td>
+        <td colspan="2">{{ 'buyer_extra'|trans(locale)|nl2br }}</td>
     </tr>
-    {% endfor %}
 </table>
 
 <!-- Services table -->
 <table class="bordered bordered-fully fat">
     <thead>
         <tr>
-            <th>{{ t.rows.th_number }}</th>
-            <th>{{ t.rows.th_name }}</th>
-            <th>{{ t.rows.th_amount }}</th>
-            <th>{{ t.rows.th_units }}</th>
-            <th>{{ t.rows.th_price }}</th>
-            <th>{{ t.rows.th_sum }}</th>
+            <th>{{ 'label_th_number'|trans(locale) }}</th>
+            <th>{{ 'label_th_name'|trans(locale) }}</th>
+            <th>{{ 'label_th_amount'|trans(locale) }}</th>
+            <th>{{ 'label_th_units'|trans(locale) }}</th>
+            <th>{{ 'label_th_price'|trans(locale) }}</th>
+            <th>{{ 'label_th_sum'|trans(locale) }}</th>
         </tr>
     </thead>
     <tbody>
@@ -43,20 +41,20 @@
     {% for service in services %}
         <tr>
             <td>{{ loop.index }}</td>
-            <td width="60%">{{ service.name[context] }}</td>
+            <td width="60%">{{ service.name[context]|process(locale) }}</td>
             <td>{{ service.amount }}</td>
             <td>{{ service.units[context] }}</td>
-            <td>{{ service.amount }} {{ t.currency }}</td>
+            <td>{{ service.price }} {{ currency }}</td>
             {% set sum = service.amount * service.price %}
-            <td>{{ sum }} {{ t.currency }}</td>
+            <td>{{ sum }} {{ currency }}</td>
         </tr>
         {% set total = total + sum %}
     {% endfor %}
     </tbody>
     <tfoot>
         <tr>
-            <td colspan="5" align="right">{{ t.rows.tf_total }}</td>
-            <td>{{ total }} {{ t.currency }}</td>
+            <td colspan="5" align="right">{{ 'label_tf_total'|trans(locale) }}</td>
+            <td>{{ total }} {{ currency }}</td>
         </tr>
     </tfoot>
 </table>
@@ -65,7 +63,7 @@
 <table class="fat">
     <tr>
         <td colspan="3">
-            {{ t.rows.total_to_pay }}: {{ total|ntw(locale) }} {{ t.currency|currency_name(locale) }}.
+            {{ 'label_total_to_pay'|trans(locale) }}: {{ total|ntw(locale) }} {{ currency|currency_name(locale) }}.
         </td>
     </tr>
 </table>
@@ -73,33 +71,33 @@
 <!-- Bank account data -->
 <table id="bank-details" class="fat">
     <tr class="bordered">
-        <td colspan="3"><strong>{{ t.rows.account_data }}:</strong></td>
+        <td colspan="3"><strong>{{ 'label_supplier_account_data'|trans(locale) }}:</strong></td>
     </tr>
     <tr>
-        <td>{{ t.rows.account_number }}</td>
-        <td colspan="2">{{ t.supplier.bank.account }}</td>
+        <td>{{ 'label_supplier_account_number'|trans(locale) }}</td>
+        <td colspan="2">{{ 'supplier_bank_account'|trans(locale) }}</td>
     </tr>
     <tr>
-        <td colspan="3">{{ t.rows.bank }}</td>
+        <td colspan="3">{{ 'label_supplier_bank'|trans(locale) }}</td>
     </tr>
     <tr>
-        <td colspan="3">{{ t.supplier.bank.name }}</td>
+        <td colspan="3">{{ 'supplier_bank_name'|trans(locale) }}</td>
     </tr>
     <tr>
-        <td>{{ t.rows.bank_address }}</td>
-        <td colspan="2">{{ t.supplier.bank.address }}</td>
+        <td>{{ 'label_supplier_bank_address'|trans(locale) }}</td>
+        <td colspan="2">{{ 'supplier_bank_address'|trans(locale) }}</td>
     </tr>
     <tr>
-        <td>{{ t.rows.swift }}</td>
-        <td colspan="2">{{ t.supplier.bank.swift }}</td>
+        <td>{{ 'label_swift'|trans(locale) }}</td>
+        <td colspan="2">{{ 'supplier_bank_swift'|trans(locale) }}</td>
     </tr>
     <tr>
-        <td><strong>{{ t.rows.corr_bank }}</strong></td>
-        <td colspan="2">{{ t.supplier.bank.corr_bank.name }}</td>
+        <td><strong>{{ 'label_supplier_corr_bank'|trans(locale) }}</strong></td>
+        <td colspan="2">{{ 'supplier_bank_corr_bank_name'|trans(locale) }}</td>
     </tr>
     <tr>
-        <td>{{ t.rows.swift }}</td>
-        <td colspan="2">{{ t.supplier.bank.corr_bank.swift }}</td>
+        <td>{{ 'label_swift'|trans(locale) }}</td>
+        <td colspan="2">{{ 'supplier_bank_corr_bank_swift'|trans(locale) }}</td>
     </tr>
     <tr>
         <td colspan="3">&nbsp;</td>
@@ -111,7 +109,7 @@
         <td colspan="3">&nbsp;</td>
     </tr>
     <tr>
-        <td height="50px">{{ t.rows.signature }}</td>
+        <td height="50px">{{ 'label_signature'|trans(locale) }}</td>
         <td colspan="2" valign="bottom">
             <img src="{{ images.signature|data_uri(mime='image/png') }}" alt="Signature">
         </td>
