Fixed missing supplier_short_title in the invoice_side.html.twig.

--- a/templates/invoice_side.html.twig
+++ b/templates/invoice_side.html.twig
@@ -103,7 +103,7 @@
         <td colspan="3">&nbsp;</td>
     </tr>
     <tr>
-        <td colspan="3">{{ t.supplier.short_title }}</td>
+        <td colspan="3">{{ 'supplier_short_title'|trans(locale) }}</td>
     </tr>
     <tr>
         <td colspan="3">&nbsp;</td>
