Adding missing service quality agreement to the invoice_side.html.twig.

--- a/templates/invoice_side.html.twig
+++ b/templates/invoice_side.html.twig
@@ -109,6 +109,14 @@
         <td colspan="3">&nbsp;</td>
     </tr>
     <tr>
+        <td colspan="3">
+            {{ 'label_service_quality_agreement'|trans(locale) }}
+        </td>
+    </tr>
+    <tr>
+        <td colspan="3">&nbsp;</td>
+    </tr>
+    <tr>
         <td height="50px">{{ 'label_signature'|trans(locale) }}</td>
         <td colspan="2" valign="bottom">
             {% if images.signature is defined and images.signature is not empty %}
